--- a/.env.example
+++ b/.env.example
@@ -5,5 +5,14 @@ VITE_SUPABASE_ANON_KEY=your_supabase_anon_key
 # AI API Configuration (Optional - for actual AI generation)
 VITE_AI_API_KEY=your_ai_api_key
 
+# Stripe Configuration
+STRIPE_SECRET_KEY=your_stripe_secret_key
+STRIPE_WEBHOOK_SECRET=your_stripe_webhook_secret
+
+# Google OAuth Configuration (for Google Workspace integration)
+GOOGLE_CLIENT_ID=your_google_oauth_client_id
+GOOGLE_CLIENT_SECRET=your_google_oauth_client_secret
+GOOGLE_REDIRECT_URI=your_google_oauth_redirect_uri
+
 # RevenueCat Configuration (Optional - for billing)
 VITE_REVENUECAT_PUBLIC_KEY=your_revenuecat_public_key
